<resources>
    <string name="app_name">SurfTRAC</string>
    <string name="password_login">Password</string>
    <string name="user_name_login">User Name</string>
    <string name="login_button">Login</string>
    <string name="surf_tracker_label">Surf Tracker</string>
    <string name="enter_a_username_editttext">Enter a Username</string>
    <string name="enter_a_password_edittext">Enter a Password</string>
    <string name="sign_up_Signup_pg_butto">Sign Up</string>
    <string name="LiveBuoyData">Buoy Data</string>
    <string name="surf_spot_conditions">Surf Spot Conditions</string>
    <string name="past_sessions">Past Sessions</string>
    <string name="log_new_session">Log New Session</string>
    <string name="log_out_from_menu">Log Out</string>
    <string name="water_icon">water icon</string>
    <string name="enter_swell_height_logSess">Enter Swell Height</string>
    <string name="enter_swell_direction_logsess">Enter Swell Direction</string>
    <string name="enter_tide_height_logsess">Enter Tide Height</string>
    <string name="log_session_button">Log Session</string>
    <string name="enter_swell_period_logsess">Enter Swell Period</string>
    <string name="enter_spot_name_log_newSpot">Enter spot name</string>
    <string name="place_holder_for_data_display">Place Holder for data display</string>
    <string name="leave_blank_to_see_all">Leave blank to see all</string>
    <string name="search_by_spot_name">Search by Spot name</string>
    <string name="search_button">Search</string>
    <string name="No_logs_message">No logs yet hit the waves!</string>
    <string name="no_logs_for_location">\"No logs for \"</string>
    <string name="No_conds_listed">No Ideal Conditions listed</string>
    <string name="fill_out_conditions_to_add_a_spot">Fill out Conditions to add a spot</string>
    <string name="spot_name">Spot Name</string>
    <string name="swell_height">Swell Height</string>
    <string name="swell_period">Swell Period</string>
    <string name="swell_direction">Swell Direction</string>
    <string name="tide">Tide</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit_conditions">Edit Conditions</string>
</resources>