<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Interactions.EditConditions">

    <TextView
        android:id="@+id/surfTracker_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/surf_tracker_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AddConditions_TextView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/fill_out_conditions_to_add_a_spot"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpotName_Conditions_edittext" />

    <EditText
        android:id="@+id/SpotName_Conditions_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/spot_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfTracker_logo" />

    <EditText
        android:id="@+id/SwellHeight_Conditions_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/swell_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddConditions_TextView" />

    <EditText
        android:id="@+id/SwellPeriod_Conditions_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/swell_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SwellHeight_Conditions_edittext" />

    <EditText
        android:id="@+id/SwellDirection_Conditions_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/swell_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SwellPeriod_Conditions_edittext" />

    <EditText
        android:id="@+id/Tide_Conditions_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/tide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SwellDirection_Conditions_edittext" />

    <Button
        android:id="@+id/Add_Condition_Button"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="316dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Conditions_Delete_Button"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfTracker_logo"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/Conditions_Delete_Button"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfTracker_logo"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>