<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Interactions.SignUp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/surf_tracker_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:hint="@string/enter_a_username_editttext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:hint="@string/enter_a_password_edittext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/SignUpNow"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/sign_up_Signup_pg_butto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>